<resources>
    <string name="app_name">My ToDo</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="start_time">Start time</string>
    <string name="category">Category</string>
    <string name="completed">Completed</string>
    <string name="save_to_do">SAVE TO-DO</string>
    <string name="empty_not_saved">Not saved because title is empty</string>
    <string name="empty_list">No to-dos yet\nAdd a new to-do</string>
    <string name="start_date">Start date</string>
    <string name="channel_name">My ToDo channel</string>
    <string name="channel_description">My ToDo channel description</string>
</resources>
